@@ -17,6 +17,7 @@ source "$APPSDIR/examples/hello/Kconfig"
 source "$APPSDIR/examples/helloxx/Kconfig"
 source "$APPSDIR/examples/json/Kconfig"
 source "$APPSDIR/examples/hidkbd/Kconfig"
+source "$APPSDIR/examples/keypadtest/Kconfig"
 source "$APPSDIR/examples/igmp/Kconfig"
 source "$APPSDIR/examples/lcdrw/Kconfig"
 source "$APPSDIR/examples/mm/Kconfig"
