@@ -245,6 +245,7 @@ CONFIG_EXAMPLES_NETTEST_CLIENTIP=0x0a000001
 # Settings for examples/nsh
 CONFIG_NSH_CONSOLE=y
 CONFIG_NSH_TELNET=n
+CONFIG_NSH_DISABLE_HEXDUMP=n
 CONFIG_NSH_IOBUFFER_SIZE=512
 CONFIG_NSH_CMD_SIZE=40
 CONFIG_NSH_STACKSIZE=4096
